--- a/index.html
+++ b/index.html
@@ -3,78 +3,252 @@ layout: default
 title: Home
 permalink: /
 ---
+<style>
+.containerd {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  /* padding: 20px; */
+  box-sizing: border-box;
+}
 
+.content-selection {
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 15px;
+  text-align: center;
+  max-width: 100%;
+  width: 70%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
 
-<div class="row">
+h3 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  color: #333;
+}
 
-  <div class="col-sm-12">
-    <h3></h3>
-    <p>
-      The Africa CDC Pathogen Genomics Initiative NGS Academy aims to develop and deliver a comprehensive training
-      framework for the implementation of next generation sequencing (NGS) for pathogen surveillance. This
-      includes
-      all
-      aspects of NGS, from sample collection to sequencing and analysis to inform public health interventions.</p>
+select, button {
+  width: 100%;
+  padding: 14px;
+  margin: 12px 0;
+  border-radius: 8px;
+  border: 2px solid #ced4da;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+}
 
+select {
+  background-color: #ffffff;
+  color: #495057;
+  appearance: none;
+  padding-right: 40px;
+  cursor: pointer;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23495057' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 15px center;
+  background-size: 18px;
+}
+
+select:focus {
+  outline: none;
+  border-color: #8c2133;
+  box-shadow: 0 0 0 3px rgba(140, 33, 51, 0.2);
+}
+
+button {
+  background-color: #8c2133;
+  color: #ffffff;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+button:hover {
+  background-color: #6c1a27;
+  transform: translateY(-2px);
+}
+
+button:active {
+  transform: translateY(0);
+}
+
+button:disabled {
+  background-color: #6c757d;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.section-container {
+  margin-top: 25px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+  opacity: 0;
+  border-radius: 8px;
+  background-color: #f8f9fa;
+}
+
+.section-container.active {
+  max-height: 300px;
+  opacity: 1;
+  overflow-y: auto;
+  border: 2px solid #e9ecef;
+}
+
+.section {
+  padding: 20px;
+  display: none;
+}
+
+.section.active {
+  display: block;
+}
+
+.section h4 {
+  color: #8c2133;
+  margin-top: 0;
+}
+
+.section p, .section ul {
+  color: #495057;
+  line-height: 1.6;
+}
+
+.section ul {
+  padding-left: 20px;
+}
+
+/* Scrollbar Styling */
+.section-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.section-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.section-container::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.section-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.selection-select {
+    height: 35px;  /* Adjust this value as needed */
+    font-size: 13px; /* Adjust to make the text fit nicely */
+    padding: 5px; /* Optional, adjust padding to control inner spacing */
+  }
+
+</style>
+
+<div class="containerd">
+<div class="content-selection">
+  <span>Welcome to the NGS Academy website, Select <b>Trainee</b> to embark on your journey to become a genomics expert or <b>Trainer</b> to shape the future of genomics education with your expertise</span> 
+  <div class="">
+    <select id="userType" class="selection-select" >
+      <option value="">Select Your Role</option>
+      <option value="Trainee">Trainee</option>
+      <option value="Trainer">Trainer</option>
+  </select>
+  </div>
+
+  <!-- <button id="navigateButton" class="btn-sm"disabled>Enter Portal</button> -->
+
+  <div style="background-color: #8c2133; padding: 2px;color:#ffffff">
+    <span id="navigateButton" class="btn-sm disabled text-white">Enter Portal</span>
+  </div>
+  
+  <div class="section-container">
+      <div id="traineeSection" class="section">
+          <h4>Trainee Information</h4>
+          <p>As a trainee, you will have access to a wide range of courses and learning materials. Our platform is designed to help you develop your skills in pathogen genomics and epidemiology. You'll be able to track your progress, participate in interactive sessions, and connect with experts in the field.</p>
+          <p>Key features for trainees include:</p>
+          <ul>
+            <li><a href="{{ site.url }}resources/help-desk/">
+              Help-Desk Ticketing System</a></li>
+              <li><a href="{{ site.url }}/resources/">
+                Tools & Resources</a></li>
+            
+              <li><a href="{{ site.url }}courses/upcoming-courses/">
+               Upcoming Courses</a></li>
+                <li><a href="{{ site.url }}calendar/">
+                  Calendar</a></li>
+          </ul>
+      </div>
+      <div id="trainerSection" class="section">
+          <h4>Trainer Information</h4>
+          <p>As a trainer, you play a crucial role in shaping the next generation of experts in pathogen genomics and epidemiology. Our platform provides you with tools and resources to create engaging and effective training materials.</p>
+          <p>Key features for trainers include:</p>
+          <ul>
+              <li>Course creation and management tools</li>
+              <li><a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH">Pathogen Surveillance Training Survey</a></li>
+
+              <li><a href="{{ site.url }}courses/curricula/">Pathogen Surveillance Training Curricula</a></li>
+
+                <li><a href="{{ site.url }}resources/help-desk/">Help-Desk Ticketing System & Trainer database</a></li>
+                <!-- Button trigger modal -->
+
+          </ul>
+      </div>
   </div>
 </div>
-
-<div class="row">
-  <div class="col-sm-12">
-    <p>
-    <h3>Pathogen genomics and epidemiology training survey </h3>
-    </p>
-    <p>A landscaping exercise is being carried out to identify existing training courses and materials relevant to
-      Pathogen Genomics and Epidemiology. Information about courses and training materials are being collated into
-      a
-      central resource that may be used in training the various role players in this area, most notably in the
-      public
-      health sector.
-      The Survey can be accessed <a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH">here</a>.
-    </p>
-  </div>
 </div>
 
+<script>
+const userTypeSelect = document.getElementById('userType');
+const navigateButton = document.getElementById('navigateButton');
+const sectionContainer = document.querySelector('.section-container');
+const traineeSection = document.getElementById('traineeSection');
+const trainerSection = document.getElementById('trainerSection');
 
-<div class="row ">
+userTypeSelect.addEventListener('change', function() {
+  const selectedValue = this.value;
+  navigateButton.disabled = !selectedValue;
+  
+  if (selectedValue === 'Trainee') {
+      navigateButton.textContent = 'Trainee Portal';
+      showSection(traineeSection, trainerSection);
+  } else if (selectedValue === 'Trainer') {
+      navigateButton.textContent = 'Trainer Portal';
+      showSection(trainerSection, traineeSection);
+  } else {
+      navigateButton.textContent = 'Enter Portal';
+      hideAllSections();
+  }
+});
 
-  <div class="col-sm-12">
+function showSection(showSection, hideSection) {
+  sectionContainer.classList.add('active');
+  showSection.classList.add('active');
+  hideSection.classList.remove('active');
+  
+  // Smooth scroll to the section
+  setTimeout(() => {
+      sectionContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
+  }, 100);
+}
 
-    <h3>Upcoming and current courses </h3>
+function hideAllSections() {
+  sectionContainer.classList.remove('active');
+  traineeSection.classList.remove('active');
+  trainerSection.classList.remove('active');
+}
 
-    <a href="{{ site.baseurl }}/courses">Schedule of upcoming and current
-      courses</a>
-  </div>
-</div>
-
-<!-- <div class="row ">
-
-  <div class="col-sm-12">
-
-    <h3>Available courses </h3>
-
-    <a href="{{ site.baseurl }}/courses">Schedule of available courses</a>
-
-  </div>
-</div> -->
-
-<!-- <div class="row ">
-
-  <div class="col-sm-12">
-
-    <h3>Related courses </h3>
-
-    <a href="{{ site.baseurl }}/courses">Schedule of related
-      courses</a>
-  </div>
-</div> -->
-
-<div class="row ">
-  <div class="col-sm-12">
-
-    <p>
-    <h3>Tools and resources </h3>
-    </p>
-    <a href="{{ site.baseurl }}/resources">List of relevant tools</a>
-  </div>
-</div>
+navigateButton.addEventListener('click', function() {
+  const userType = userTypeSelect.value;
+  if (userType === 'Trainee') {
+      console.log('Navigating to Trainee portal');
+      //window.location.href = '/courses/';
+  } else if (userType === 'Trainer') {
+      console.log('Navigating to Trainer dashboard');
+      //window.location.href = '/courses/curricula/';
+  }
+});
+</script>
