updated main branch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
   padding: 15px;
   text-align: center;
   max-width: 100%;
-  width: 75%;
+  width: 70%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -171,14 +171,14 @@ button:disabled {
           <p>As a trainee, you will have access to a wide range of courses and learning materials. Our platform is designed to help you develop your skills in pathogen genomics and epidemiology. You'll be able to track your progress, participate in interactive sessions, and connect with experts in the field.</p>
           <p>Key features for trainees include:</p>
           <ul>
-            <li><a href="{{ site.url }}resources/help-desk/">
+            <li><a target="_blank" href="{{ site.url }}resources/help-desk/">
               Help-Desk Ticketing System</a></li>
-              <li><a href="{{ site.url }}/resources/">
+              <li><a target="_blank" href="{{ site.url }}/resources/">
                 Tools & Resources</a></li>
             
-              <li><a href="{{ site.url }}courses/upcoming-courses/">
+              <li><a target="_blank" href="{{ site.url }}courses/upcoming-courses/">
                Upcoming Courses</a></li>
-                <li><a href="{{ site.url }}calendar/">
+                <li><a target="_blank" href="{{ site.url }}calendar/">
                   Calendar</a></li>
           </ul>
       </div>
@@ -188,11 +188,11 @@ button:disabled {
           <p>Key features for trainers include:</p>
           <ul>
               <li>Course creation and management tools</li>
-              <li><a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH">Pathogen Surveillance Training Survey</a></li>
+              <li><a target="_blank" href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH">Pathogen Surveillance Training Survey</a></li>
 
-              <li><a href="{{ site.url }}courses/curricula/">Pathogen Surveillance Training Curricula</a></li>
+              <li><a target="_blank" href="{{ site.url }}courses/curricula/">Pathogen Surveillance Training Curricula</a></li>
 
-                <li><a href="{{ site.url }}resources/help-desk/">Help-Desk Ticketing System & Trainer database</a></li>
+                <li><a target="_blank" href="{{ site.url }}resources/help-desk/">Help-Desk Ticketing System & Trainer database </a></li>
                 <!-- Button trigger modal -->
 
           </ul>
