updated text on trainee and trainer selection on the home page

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ button:disabled {
 
 <div class="containerd">
 <div class="content-selection">
-  <span>Welcome to the NGS Academy website, Select <b>Trainee</b> to embark on your journey to become a genomics expert or <b>Trainer</b> to shape the future of genomics education with your expertise</span> 
+  <span>Welcome to the NGS Academy website. Select <b>Trainee</b> to highlight links to resources relevant to your journey to become a genomics expert or <b>Trainer</b> to identify resources for you to extend and share your training expertise.</span> 
   <div class="">
     <select id="userType" class="selection-select" >
       <option value="">Select Your Role</option>
@@ -168,7 +168,7 @@ button:disabled {
   <div class="section-container">
       <div id="traineeSection" class="section">
           <h4>Trainee Information</h4>
-          <p>As a trainee, you will have access to a wide range of courses and learning materials. Our platform is designed to help you develop your skills in pathogen genomics and epidemiology. You'll be able to track your progress, participate in interactive sessions, and connect with experts in the field.</p>
+          <p>As a trainee, you will have access to a wide range of courses and learning materials. Our platform is designed to help you develop your skills in pathogen genomics and epidemiology. You'll be able to participate in interactive sessions, and connect with experts in the field.</p>
           <p>Key features for trainees include:</p>
           <ul>
             <li><a target="_blank" href="{{ site.url }}resources/help-desk/">
