--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@ button:disabled {
   }
 
 </style>
-
+<div class="">
+  {% include subpage-intro.html %} 
+ <hr> 
+</div>
 <div class="containerd">
 <div class="content-selection">
   <span>Welcome to the NGS Academy website, Select <b>Trainee</b> to embark on your journey to become a genomics expert or <b>Trainer</b> to shape the future of genomics education with your expertise</span> 
