updated index.html file with subpage header

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ button:disabled {
   }
 
 </style>
+<div class="">
+  {% include subpage-intro.html %}
+  <hr>
+</div>
 
 <div class="containerd">
 <div class="content-selection">
