fixed basestack broken url

--- a/tools_resources.html
+++ b/tools_resources.html
@@ -27,7 +27,7 @@ permalink: /resources/
     <p>Basestack is a platform for local deployment of standardized genomic surveillance analysis tools. It
       currently
       enables real-time analysis of Nanopore generated sequencing data for SARS-CoV-2.
-      <br><a href="https://jhuapl-bio.github.io/Basestack/" target="_blank">https://jhuapl-bio.github.io/Basestack/</a>
+      <br><a href="https://github.com/jhuapl-bio/Basestack" target="_blank">https://github.com/jhuapl-bio/Basestack</a>
     </p>
   </div>
 </div>
