updated file path

--- a/curricula-update-01.html
+++ b/curricula-update-01.html
@@ -284,7 +284,7 @@ permalink: /courses/curricula-update-01/
                                     <td>G09</td>
                                     <td>All pathogens</td>
                                     <td>Bioinformatics Scientist</td>
-                                    <td><a href="/ngs-academy/uploads/UCT_NGS_CDC-Module_G01-An-Introduction-to-Basic-Molecular-and-Microbial-Biology.pdf" target="_blank">An introduction to Basic Molecular and Microbial Biology.</a></td>
+                                    <td><a href="{{ site.url }}uploads/UCT_NGS_CDC-Module_G01-An-Introduction-to-Basic-Molecular-and-Microbial-Biology.pdf" target="_blank">An introduction to Basic Molecular and Microbial Biology.</a></td>
                                   </tr>
 
                                   
