added remaining pathogen tabs

--- a/curricula-update-01.html
+++ b/curricula-update-01.html
@@ -430,6 +430,9 @@ permalink: /courses/curricula-update-01/
                     <li class="active" data-tab="tab2-1">Bacterial Course</li>
                     <li data-tab="tab2-2">Viral Course</li>
                     <li data-tab="tab2-3">Malaria Course</li>
+                    <li data-tab="tab2-4">Parasitic</li>
+                    <li data-tab="tab2-5">Fungal</li>
+                    <li data-tab="tab2-6">Metagenomics</li>
                 </ul>
 
                 <!-- Tab Content -->
@@ -659,6 +662,156 @@ permalink: /courses/curricula-update-01/
                                 <td>Malaria</td>
                                 <td>Wet-laboratory</td>
                                 <td>M08. Using Malaria Genomic Data for Decision-Making</td>
+                              </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="tab2-4" class="tab-content">
+                    <table id="table24" class="display target-table">
+                        <thead>
+                            <tr>
+                                <th>Module Code</th>
+                                <th>Pathogen</th>
+                                <th>Persona</th>
+                                <th name="title_column">Module Title</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>P01</td>
+                                <td>Parasitic</td>
+                                <td>Wet-laboratory</td>
+                                <td>Study Design for Parasitic Pathogen Surveillance</td>
+                              </tr>
+                              <tr>
+                                <td>P02</td>
+                                <td>Parasitic</td>
+                                <td>Wet-laboratory</td>
+                                <td>Sample Processing and Library Preparation for Parasitic Pathogens (Theory and Wet-lab Practical)</td>
+                              </tr>
+                              <tr>
+                                <td>P03</td>
+                                <td>Parasitic</td>
+                                <td>Dry-laboratory</td>
+                                <td>Introduction to Parasitic NGS Data Processing</td>
+                              </tr>
+                              <tr>
+                                <td>P04</td>
+                                <td>Parasitic</td>
+                                <td>Dry-laboratory</td>
+                                <td>NGS Data Analysis Using the Artemis Genome Browser and Annotation Tool</td>
+                              </tr>
+                              <tr>
+                                <td>P05</td>
+                                <td>Parasitic</td>
+                                <td>Dry-laboratory</td>
+                                <td>Using Parasitic Databases and Resources</td>
+                              </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="tab2-5" class="tab-content">
+                    <table id="table25" class="display target-table">
+                        <thead>
+                            <tr>
+                                <th>Module Code</th>
+                                <th>Pathogen</th>
+                                <th>Persona</th>
+                                <th name="title_column">Module Title</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>F01</td>
+                                <td>Fungi</td>
+                                <td>Wet-laboratory</td>
+                                <td>Study Design and Sequencing Strategies for Fungal Pathogen Surveillance</td>
+                              </tr>
+                              <tr>
+                                <td>F02</td>
+                                <td>Fungi</td>
+                                <td>Wet-laboratory</td>
+                                <td>Overview of Fungal Pathogen Surveillance Using NGS</td>
+                              </tr>
+                              <tr>
+                                <td>F03</td>
+                                <td>Fungi</td>
+                                <td>Dry-laboratory</td>
+                                <td>Introduction to Fungal Databases</td>
+                              </tr>
+                              <tr>
+                                <td>F04</td>
+                                <td>Fungi</td>
+                                <td>Wet-laboratory</td>
+                                <td>Fungal Sample Processing and Library Preparation (Theory and Wet-lab Practical)</td>
+                              </tr>
+                              <tr>
+                                <td>F05</td>
+                                <td>Fungi</td>
+                                <td>Dry-laboratory</td>
+                                <td>Phylogenetics and Visualization for Fungal Genomes</td>
+                              </tr>
+                              <tr>
+                                <td>F06</td>
+                                <td>Fungi</td>
+                                <td>Dry-laboratory</td>
+                                <td>Antifungal Resistance (AMR)</td>
+                              </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="tab2-6" class="tab-content">
+                    <table id="table26" class="display target-table">
+                        <thead>
+                            <tr>
+                                <th>Module Code</th>
+                                <th>Pathogen</th>
+                                <th>Persona</th>
+                                <th name="title_column">Module Title</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>MG01</td>
+                                <td>Metagenomics</td>
+                                <td>Wet-laboratory</td>
+                                <td>Introduction to Metagenomics and Use Cases</td>
+                              </tr>
+                              <tr>
+                                <td>MG02</td>
+                                <td>Metagenomics</td>
+                                <td>Wet-laboratory</td>
+                                <td>Study Design and Lab Setup for Metagenomics </td>
+                              </tr>
+                              <tr>
+                                <td>MG03</td>
+                                <td>Metagenomics</td>
+                                <td>Wet-laboratory</td>
+                                <td>Sample Processing and Library Preparation for Metagenomics (Theory and Wet-lab Practical)</td>
+                              </tr>
+                              <tr>
+                                <td>MG04</td>
+                                <td>Metagenomics</td>
+                                <td>Dry-laboratory</td>
+                                <td>Introduction to Metagenomics Data Analysis</td>
+                              </tr>
+                              <tr>
+                                <td>MG05</td>
+                                <td>Metagenomics</td>
+                                <td>Wet-laboratory</td>
+                                <td>Metagenomics Data Analysis. iSeq 100 Loading</td>
+                              </tr>
+                              <tr>
+                                <td>MG06</td>
+                                <td>Metagenomics</td>
+                                <td>Wet-laboratory</td>
+                                <td>Quality Control, Sample QC, Sequencing Run QC</td>
+                              </tr>
+                              <tr>
+                                <td>MG07</td>
+                                <td>Metagenomics</td>
+                                <td>Dry-laboratory</td>
+                                <td>Metagenomics Analysis. Cloud-based Metagenomics Platform for Researchers</td>
                               </tr>
                         </tbody>
                     </table>
