--- a/curricula-update-01.html
+++ b/curricula-update-01.html
@@ -315,7 +315,7 @@ permalink: /courses/curricula-update-01/
                                     <td>G09</td>
                                     <td>All pathogens</td>
                                     <td>Wet-laboratory</td>
-                                    <td><a href="{{ site.url }}uploads/UCT_NGS_CDC-Module_G01-An-Introduction-to-Basic-Molecular-and-Microbial-Biology.pdf" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
+                                    <td><a href="{{ site.url }}uploads/G01-An-Intro-Basic-Molecular-and-Microbial-Biology.pdf" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
                                   </tr>
                             </tbody>
                         </table>
@@ -415,26 +415,26 @@ permalink: /courses/curricula-update-01/
                             <tr>
                                 <td>W01</td>
                                 <td>All pathogens</td>
-                                <td>Wet-Lab Scientist</td>
+                                <td>Wet-laboratory</td>
                                 <td>Introduction to Biosafety and Biosecurity</td>
                           
                               </tr>
                               <tr>
                                 <td>W02</td>
                                 <td>All pathogens</td>
-                                <td>Wet-Lab Scientist </td>
+                                <td>Wet-laboratory</td>
                                 <td>Basic Laboratory Requirements and Operational Setup for NGS Implementation</td>
                               </tr>
                               <tr>
                                 <td>W03</td>
                                 <td>All pathogens</td>
-                                <td>Wet-Lab Scientist</td>
+                                <td>Wet-laboratory</td>
                                 <td>Introduction to Fundamental Laboratory Skills and Calculations</td>
                               </tr>
                               <tr>
                                 <td>W04</td>
                                 <td>All pathogens</td>
-                                <td>Wet-Lab Scientist </td>
+                                <td>Wet-laboratory</td>
                                 <td>Basic Molecular Techniques for NGS Implementation</td>
                               </tr>
                         </tbody>
